Cambios desde Talpa

--- a/Tarea5_HernandezDaniel.ipynb
+++ b/Tarea5_HernandezDaniel.ipynb
@@ -9,11 +9,11 @@
     "    \n",
     "### <font color='navy'> Simulación matemática. \n",
     "\n",
-    "**Nombres:** Daniel Hernandez Vila.\n",
+    "**Nombres:** Daniel Hernandez Vila. Talpa de Jesús Ornelas Güitrón\n",
     "\n",
     "**Fecha:** 02 de octubre del 2023.\n",
     "\n",
-    "**Expediente** : 728962.\n",
+    "**Expediente** : 728962. 745134.\n",
     "    \n",
     "**Profesor:** Oscar David Jaramillo Zuluaga.\n",
     "    \n",
@@ -60,10 +60,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Código de solución estudiante 1\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Función f(x)=log_10(2x)+8^x\n",
+    "def f1(x):\n",
+    "    return np.log10(2*x) + 8**x\n",
+    "\n",
+    "# Función f(x)=(2^x)/(x^4)\n",
+    "def f2(x):\n",
+    "    return((2**x)/(x**4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Aprox f1</th>\n",
+       "      <th>Aprox f2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cantidad de términos</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9486.568217</td>\n",
+       "      <td>1.977327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>17771.557729</td>\n",
+       "      <td>1.507473</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>17278.232668</td>\n",
+       "      <td>0.990294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>14258.281999</td>\n",
+       "      <td>0.97817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10000</th>\n",
+       "      <td>15673.519703</td>\n",
+       "      <td>1.019121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100000</th>\n",
+       "      <td>15767.33837</td>\n",
+       "      <td>1.023624</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Aprox f1  Aprox f2\n",
+       "Cantidad de términos                        \n",
+       "1                      9486.568217  1.977327\n",
+       "10                    17771.557729  1.507473\n",
+       "100                   17278.232668  0.990294\n",
+       "1000                  14258.281999   0.97817\n",
+       "10000                 15673.519703  1.019121\n",
+       "100000                 15767.33837  1.023624"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def montecarlo1(f, a, b, N):\n",
+    "    # Generar N puntos uniformemente distribudos en el intervalo [a,b)\n",
+    "    ui = np.random.uniform(a, b, N)\n",
+    "    \n",
+    "    # Evaluar la función en los N puntos aleatorios, obtener el promedio y multiplicarlo por el intervalo\n",
+    "    integral = ((b-a)/N)*np.sum(f(ui))\n",
+    "    # integral = (b-a)*np.mean(f(ui))   Esta línea es equivalente a la anterior\n",
+    "    return integral\n",
+    "\n",
+    "# Definimos cantidades de terminos\n",
+    "N = np.logspace(0, 5, 6).astype(int)\n",
+    "\n",
+    "# Crear el DataFrame de pandas (tabla) que contendrá la información\n",
+    "tabla2 = pd.DataFrame(index=N, columns = ['Aprox f1', 'Aprox f2'])\n",
+    "\n",
+    "\n",
+    "# Agregar nombre al índice para que aprezca en la tabla\n",
+    "tabla2.index.name = 'Cantidad de términos'\n",
+    "a, b = 1, 5\n",
+    "# Rellenar las celdas de la aproximación de cada función\n",
+    "for n in N:\n",
+    "    aprox_f = montecarlo1(f1, a, b, n)\n",
+    "    aprox_g = montecarlo1(f2, a, b, n)\n",
+    "    \n",
+    "    tabla2.loc[n, 'Aprox f1'] = aprox_f\n",
+    "    tabla2.loc[n, 'Aprox f2'] = aprox_g\n",
+    "     \n",
+    "    \n",
+    "tabla2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -187,11 +317,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Respuesta planteada en el ejercicio usando (markdown) estudiante 1\n",
-    " La respuesta es ........."
+    " La aploximacion con la integracion montecarlo unando terminos desde 10 a 100000 nos obtiene un valor aproximado.\n",
+    " \n",
+    " Para la integral 1:\n",
+    " $$\\int_{1}^{5}\\log_{10}(2x)+8^x\\text{d}x=15767.33837$$\n",
+    " Para la integral 2:\n",
+    " $$\\int_{1}^{5}\\frac{2^x}{x^4}\\text{d}x=1.023624$$\n",
+    " \n",
+    " Si comprobamos nuestros resultados con una integral definida:\n",
+    " \n",
+    " $$\\int_{1}^{5}\\log_{10}(2x)+8^x\\text{d}x=15757.191638584207$$\n",
+    " $$\\int_{1}^{5}\\frac{2^x}{x^4}\\text{d}x=1.0093064153618818$$\n",
+    " \n",
+    " Por lo que se observa una buena aproximación con un error a cuatro decimales de:\n",
+    "\n",
+    "$$\\frac{15767.3383-15757.1916}{15767.3383}*100 \\approx 0.0643\\%$$\n",
+    "\n",
+    "Y para el segundo problema\n",
+    "\n",
+    "$$\\frac{1.0236-1.0093}{1.0236}*100 \\approx 1.3970\\%$$"
    ]
   },
   {
@@ -224,6 +379,13 @@
     "\n",
     "## SE DEBE ACLARAR QUE CADA VEZ QUE SE CORRE EL PROGRAMA AL TENER DISTINTA SEMILLA DEBIDO AL TIEMPO DE LA COMPUTADORA, LOS VALORES OBTENIDOS Y COMPARADOS FUERON DE LA PRIMERA CORRIDA REALIZADA"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
