--- a/Tarea6_HernandezDanielOrnelasTalpa.ipynb
+++ b/Tarea6_HernandezDanielOrnelasTalpa.ipynb
@@ -60,13 +60,13 @@
    "source": [
     "Es por ello que los limites seleccionados son [-3,0] y [1,4] con un area de:\n",
     "$$a=\\pi*r_1*r_2$$\n",
-    "$$a=\\pi*\\sqrt{2}*2$$\n",
-    "$$a\\approx8.8858$$"
+    "$$a=\\pi*\\sqrt{2}*1$$\n",
+    "$$a\\approx4.4429$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -109,49 +109,49 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1.285586</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>3.6</td>\n",
-       "      <td>59.485766</td>\n",
+       "      <td>18.971532</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
-       "      <td>4.95</td>\n",
-       "      <td>44.292928</td>\n",
+       "      <td>3.78</td>\n",
+       "      <td>14.920108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1000</th>\n",
-       "      <td>4.185</td>\n",
-       "      <td>52.902203</td>\n",
+       "      <td>3.888</td>\n",
+       "      <td>12.489254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10000</th>\n",
-       "      <td>3.9987</td>\n",
-       "      <td>54.998814</td>\n",
+       "      <td>4.0635</td>\n",
+       "      <td>8.539116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100000</th>\n",
-       "      <td>4.04244</td>\n",
-       "      <td>54.506566</td>\n",
+       "      <td>4.0302</td>\n",
+       "      <td>9.288630</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Aproximación      Error\n",
-       "1               9.0   1.285586\n",
-       "10              3.6  59.485766\n",
-       "100            4.95  44.292928\n",
-       "1000          4.185  52.902203\n",
-       "10000        3.9987  54.998814\n",
-       "100000      4.04244  54.506566"
+       "       Aproximación       Error\n",
+       "1               0.0  100.000000\n",
+       "10              3.6   18.971532\n",
+       "100            3.78   14.920108\n",
+       "1000          3.888   12.489254\n",
+       "10000        4.0635    8.539116\n",
+       "100000       4.0302    9.288630"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
     "for n in N:\n",
     "    area_aprox = m2(reg, a1, b1, a2, b2, n)\n",
     "    tabla.loc[n, 'Aproximación'] = area_aprox\n",
-    "    tabla.loc[n, 'Error'] = 100*np.abs(area_aprox - (np.pi*2*np.sqrt(2)))/(np.pi*2*np.sqrt(2))\n",
+    "    tabla.loc[n, 'Error'] = 100*np.abs(area_aprox - (np.pi*np.sqrt(2)))/(np.pi*np.sqrt(2))\n",
     "\n",
     "tabla"
    ]
